fix: leaking background when network name is too long

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -103,7 +103,7 @@ button:hover {
 }
 
 #network {
-    background-color: transparent;
+    background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.01), white 20%);
     color: #444;
 }
 
